--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <div class="card bg-light text-center col-4 ml-3">
         <img class="card-img-top" src="img/DietPic.jpg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Nutrition Plan</h5>
+          <h5 class="card-title"><span class="no-wrap">Nutrition</span> Plan</h5>
           <h6 class="card-subtitle mb-2 text-muted">30$</h6>
           <a href="#" class="card-link">More...</a>
         </div>
