--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- NAVIGATION SECTION -->
   <nav class="navbar navbar-dark bg-dark navbar-expand-md">
     <div class="container">
-      <a class="navbar-brand" href="Index.html">Sreten Acimovic &trade;</a>
+      <a class="navbar-brand" href="#">Sreten Acimovic &trade;</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
         <span class="navbar-toggler-icon"></span>
       </button>
