Added back to top button

--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@
       </div>
     </div>
   </div>
+  <!-- BACK TO TOP BUTTON -->
+  <button id="back-to-top-btn"><i class="las la-angle-double-up"></i></button>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
