--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!-- NAVIGATION SECTION -->
-    <nav class="navbar navbar-dark bg-dark navbar-expand-md">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-md fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html">Sreten Acimovic &trade;</a>
         <button
