--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
 
   <body>
     <!-- NAVIGATION SECTION -->
-    <nav class="navbar navbar-dark bg-dark navbar-expand-md">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-md fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html">Sreten Acimovic &trade;</a>
         <button
