--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
 
     <!-- NAVIGATION SECTION -->
-    <nav class="navbar navbar-dark bg-dark navbar-expand-md">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-md fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">Sreten Acimovic &trade;</a>
         <button
