updates and fix

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
   </head>
 
   <body>
+<!-- PRELOADER START -->
+<div class="loader">
+  <img src="/img/loading.gif" alt="Loading" />
+  <h5>Loading...</h5>
+</div>
+<!-- PRELOADER END -->
 
     <!-- NAVIGATION SECTION -->
     <nav class="navbar navbar-dark bg-dark navbar-expand-md fixed-top">
@@ -130,7 +136,7 @@
           <h5>About</h5>
           <a href="./about.html"><img class="picHover" src="./img/BiographyPicture.png" alt="" />
         </div></a>
-        <div class="pt-custom col-12 col-md-6 text-center text-md-left">
+        <div class="pt-4 pt-md-0 col-12 col-md-6 text-center text-md-left">
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam
             debitis ex laboriosam non fugiat, consectetur voluptate maxime
