--- a/gallery.html
+++ b/gallery.html
@@ -93,17 +93,17 @@
       </div>
       <div class="row">
         <img
-          class="img-fluid col-12 col-md-4 pt-3 pl-3 pr-3"
+          class="img-fluid col-12 col-md-4 pt-3 pl-3 pr-3 pb-3"
           src="./img/gallery7.jpg"
           alt=""
         />
         <img
-          class="img-fluid col-12 col-md-4 pt-3 pl-3 pr-3"
+          class="img-fluid col-12 col-md-4 pt-3 pl-3 pr-3 pb-3"
           src="./img/gallery8.jpg"
           alt=""
         />
         <img
-          class="img-fluid col-12 col-md-4 pt-3 pl-3 pr-3"
+          class="img-fluid col-12 col-md-4 pt-3 pl-3 pr-3 pb-3"
           src="./img/gallery9.jpg"
           alt=""
         />
@@ -111,7 +111,7 @@
     </div>
 
     <!-- SOCIAL MEDIA SECTION -->
-    <div id="contact" class="media-wrapper container-fluid mt-5 p-2">
+    <div id="contact" class="media-wrapper container-fluid p-2">
       <div class="row justify-content-center">
         <h6 class="mb-3">Let's connect!</h6>
       </div>
