--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
 <!-- PRELOADER START -->
 <div class="loader">
-  <img src="/img/loading.gif" alt="Loading" />
+  <img src="./img/loading.gif" alt="Loading" />
   <h5>Loading...</h5>
 </div>
 <!-- PRELOADER END -->
