updated contact page

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/Style.css" />
     <title>Contact</title>
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <!-- NAVIGATION SECTION -->
     <nav class="navbar navbar-dark bg-dark navbar-expand-md fixed-top">
       <div class="container">
@@ -56,7 +56,7 @@
 
     <!-- FORM START -->
     <div class="container form-bck">
-      <i class="las la-envelope p-3"></i>
+      <i class="las la-envelope p-3 letter-img"></i>
       <h1 class="text-center">Contact us</h1>
       <form action="" class="pt-5">
         <div class="row">
@@ -116,12 +116,29 @@
                 value="Send"
               />
             </div>
+            <div class="row justify-content-center media pt-4 pb-3">
+              <a href="#"><i class="lab la-instagram"></i></a>
+              <a href="#"><i class="lab la-facebook"></i></a>
+              <a href="#"><i class="lab la-youtube"></i></a>
+              <a href="#"><i class="las la-envelope"></i></a>
+            </div>
           </div>
         </div>
       </form>
     </div>
     <!-- FORM END -->
 
+    <!-- FOOTER SECTION -->
+    <div class="footer-wrapper container-fluid mt-auto bord">
+      <div class="container">
+        <div class="footer row justify-content-center align-items-center">
+          <small class="text-center"
+            >Copyright &copy; 2020<br />Designed and coded by Sreten Acimovic
+          </small>
+        </div>
+      </div>
+    </div>
+    <!-- FOOTER SECTION END -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
