Overall fix and update

--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
     </div>
 
     <!-- SOCIAL MEDIA SECTION -->
-    <div id="contact" class="media-wrapper container-fluid p-2">
+    <div id="contact" class="media-wrapper container-fluid pt-2">
       <div class="row justify-content-center">
         <h6 class="mb-3">Let's connect!</h6>
       </div>
