--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     </div>
 
     <!-- SOCIAL MEDIA SECTION -->
-    <div id="contact" class="media-wrapper container-fluid mt-5 p-2">
+    <div id="contact" class="media-wrapper container-fluid mt-5 pt-2">
       <div class="row justify-content-center">
         <h6 class="mb-3">Let's connect!</h6>
       </div>
